5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4011/executions/1671_1880.log
== TEST (2019-04-29 02:43:35) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

m = int(input("Escolha um numero relativo ao mes do ano: "))

if(m == 1):
	print("janeiro")
elif(m == 2):
	print("fevereiro")
elif(m == 3):
	print("marco")
elif(m == 4):
	print("maio)
elif(m == 5):
	print("abril")
elif(m == 6):
	print("junho")
elif(m == 7):
	print("julho")
elif(m == 8):
	print("agosto")
elif(m == 9):
	print("setembro")
elif(m == 10):
	print("outubro)
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- ERROR:
File "XXXX", line 12
    print("maio)
               ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 02:43:47) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

m = int(input("Escolha um numero relativo ao mes do ano: "))

if(m == 1):
	print("janeiro")
elif(m == 2):
	print("fevereiro")
elif(m == 3):
	print("marco")
elif(m == 4):
	print("maio")
elif(m == 5):
	print("abril")
elif(m == 6):
	print("junho")
elif(m == 7):
	print("julho")
elif(m == 8):
	print("agosto")
elif(m == 9):
	print("setembro")
elif(m == 10):
	print("outubro)
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- ERROR:
File "XXXX", line 24
    print("outubro)
                  ^
SyntaxError: EOL while scanning string literal
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 02:44:03) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

m = int(input("Escolha um numero relativo ao mes do ano: "))

if(m == 1):
	print("janeiro")
elif(m == 2):
	print("fevereiro")
elif(m == 3):
	print("marco")
elif(m == 4):
	print("maio")
elif(m == 5):
	print("abril")
elif(m == 6):
	print("junho")
elif(m == 7):
	print("julho")
elif(m == 8):
	print("agosto")
elif(m == 9):
	print("setembro")
elif(m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
maio
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 02:44:11) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

m = int(input("Escolha um numero relativo ao mes do ano: "))

if(m == 1):
	print("janeiro")
elif(m == 2):
	print("fevereiro")
elif(m == 3):
	print("marco")
elif(m == 4):
	print("maio")
elif(m == 5):
	print("abril")
elif(m == 6):
	print("junho")
elif(m == 7):
	print("julho")
elif(m == 8):
	print("agosto")
elif(m == 9):
	print("setembro")
elif(m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
maio
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 02:44:21) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

m = int(input("Escolha um numero relativo ao mes do ano: "))

if(m == 1):
	print("janeiro")
elif(m == 2):
	print("fevereiro")
elif(m == 3):
	print("marco")
elif(m == 4):
	print("maio")
elif(m == 5):
	print("abril")
elif(m == 6):
	print("junho")
elif(m == 7):
	print("julho")
elif(m == 8):
	print("agosto")
elif(m == 9):
	print("setembro")
elif(m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.163413
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
maio
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
abril
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 02:45:33) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

m = int(input("Escolha um numero relativo ao mes do ano: "))

if(m == 1):
	print("janeiro")
elif(m == 2):
	print("fevereiro")
elif(m == 3):
	print("marco")
elif(m == 4):
	print("abril")
elif(m == 5):
	print("maio")
elif(m == 6):
	print("junho")
elif(m == 7):
	print("julho")
elif(m == 8):
	print("agosto")
elif(m == 9):
	print("setembro")
elif(m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.138825
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 02:47:11) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

m = int(input("Escolha um numero relativo ao mes do ano: "))

if(m == 1):
	print("janeiro")
elif(m == 2):
	print("fevereiro")
elif(m == 3):
	print("marco")
elif(m == 4):
	print("abril")
elif(m == 5):
	print("maio")
elif(m == 6):
	print("junho")
elif(m == 7):
	print("julho")
elif(m == 8):
	print("agosto")
elif(m == 9):
	print("setembro")
elif(m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- EXECUTION TIME:
0.131295
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero do mes invalido
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 02:47:17) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

m = int(input("Escolha um numero relativo ao mes do ano: "))

if(m == 1):
	print("janeiro")
elif(m == 2):
	print("fevereiro")
elif(m == 3):
	print("marco")
elif(m == 4):
	print("abril")
elif(m == 5):
	print("maio")
elif(m == 6):
	print("junho")
elif(m == 7):
	print("julho")
elif(m == 8):
	print("agosto")
elif(m == 9):
	print("setembro")
elif(m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero do mes invalido")
-- OUTPUT:
abril
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 02:47:46) 
-- CODE:
# Ao testar sua solução, não se limite ao caso de exemplo.

m = int(input("Escolha um numero relativo ao mes do ano: "))

if(m == 1):
	print("janeiro")
elif(m == 2):
	print("fevereiro")
elif(m == 3):
	print("marco")
elif(m == 4):
	print("abril")
elif(m == 5):
	print("maio")
elif(m == 6):
	print("junho")
elif(m == 7):
	print("julho")
elif(m == 8):
	print("agosto")
elif(m == 9):
	print("setembro")
elif(m == 10):
	print("outubro")
elif(m == 11):
	print("novembro")
elif(m == 12):
	print("dezembro")
else:
	print("numero de mes invalido")
-- EXECUTION TIME:
0.135089
-- TEST CASE 1:
---- input:
4
---- correct output:
abril
---- user output:
abril
-- TEST CASE 2:
---- input:
5
---- correct output:
maio
---- user output:
maio
-- TEST CASE 3:
---- input:
16
---- correct output:
numero de mes invalido
---- user output:
numero de mes invalido
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
